# hello

./: .gitignore  ChangeLog  Makefile.in  README.md  aclocal.m4  configure  configure.ac
m4/: ChangeLog
po/: .gitignore  ChangeLog  hello.pot  ru.gmo  ru.po
src/: .gitignore  Makefile.am  Makefile.in  main.cpp
